src/objects/Testtaker_Test_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Correct__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Correct?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Question__c</fullName>
        <label>Test Question</label>
        <referenceTo>Testtaker_Test_Question__c</referenceTo>
        <relationshipLabel>Test Answers</relationshipLabel>
        <relationshipName>Test_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Answer</label>
    <nameField>
        <displayFormat>TA-{00000}</displayFormat>
        <label>Test Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>